Fleshing out the login form

--- a/src/ct1/src/AppBundle/Resources/views/index.html.twig
+++ b/src/ct1/src/AppBundle/Resources/views/index.html.twig
@@ -11,6 +11,7 @@
     <div class="right-box">
         {% if authen_form %}
             {{ form_start(authen_form) }}
+            {{ form_widget(authen_form) }}
             {{ form_end(authen_form) }}
         {% endif %}
     </div>
