--- a/src/ct1/src/AppBundle/Resources/views/index.html.twig
+++ b/src/ct1/src/AppBundle/Resources/views/index.html.twig
@@ -17,9 +17,7 @@
     {# authentication #}
     <div class="right-box">
         {% if authen_form %}
-            {{ form_start(authen_form) }}
-            {{ form_widget(authen_form) }}
-            {{ form_end(authen_form) }}
+            {% include('@AppBundle/Resources/views/login.html.twig') %}
         {% endif %}
     </div>
 {% endblock %}
