Make template for posts

--- a/src/ct1/src/AppBundle/Resources/views/index.html.twig
+++ b/src/ct1/src/AppBundle/Resources/views/index.html.twig
@@ -12,7 +12,7 @@
     </div>
     {# posts #}
     <div class="left-box">
-        posts go here
+        {% include('@AppBundle/Resources/views/posts.html.twig') %}
     </div>
     {# authentication #}
     <div class="right-box">
