--- a/src/ct1/src/AppBundle/Resources/views/login.html.twig
+++ b/src/ct1/src/AppBundle/Resources/views/login.html.twig
@@ -1,3 +1,10 @@
-{{ form_start(authen_form) }}
-{{ form_widget(authen_form) }}
-{{ form_end(authen_form) }}
+<div id="login-form">
+    {{ form_start(authen_form) }}
+    {{ form_widget(authen_form) }}
+    {{ form_end(authen_form) }}
+</div>
+<div id="logout-form">
+    {{ form_start(logout_form) }}
+    {{ form_widget(logout_form) }}
+    {{ form_end(logout_form) }}
+</div>
