Setting up the post form

--- a/src/ct1/src/AppBundle/Resources/views/posts.html.twig
+++ b/src/ct1/src/AppBundle/Resources/views/posts.html.twig
@@ -1,1 +1,7 @@
-posts go here
+<div id="post-posting-area">
+</div>
+<div id="post-form-area">
+    {{ form_start(post_form) }}
+    {{ form_widget(post_form) }}
+    {{ form_end(post_form) }}
+</div>
