Creating the post manager js

--- a/src/ct1/src/AppBundle/Resources/views/index.html.twig
+++ b/src/ct1/src/AppBundle/Resources/views/index.html.twig
@@ -10,6 +10,7 @@
     {{ parent() }}
     {% javascripts
         '@AppBundle/Resources/public/js/authentication.js'
+        '@AppBundle/Resources/public/js/posts.js'
     %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
